[project]
name = "ensureproc"
readme = "README.md"
version = "0.0.1"
authors = [
    { name = "Dan Miller", email = "daniel.keegan.miller@gmail.com" }
]
dependencies = []
[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "build==0.10.0",
    "ruff==0.0.278",
    "pyright==1.1.317",
    "pytest==7.4.0",
]

[tool.pyright]
exclude = [
    "test/**"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
